--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>jspexp</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+  <display-name>springweb2</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -9,67 +9,32 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <!-- 서버단위 설정값 처리. 
-  	1. context-param : 서버단위 정보 할당 태그
-  	2. description : 파라미터 설명(필수 아님)
-  	3. param-name : 매개변수 이름
-  	4. param-value : 매개변수의 값.
   
-
+   <!-- .do 마지막 url을 통해서 front 컨트롤러 호출 -->
+  <servlet-mapping>
+     <servlet-name>dispatcher</servlet-name>
+     <url-pattern>*.do</url-pattern>
+  </servlet-mapping>
+  
+  <!-- 해당 servlet에 대한 선언 
+     front컨트롤러와 연동하는 컨테이너 설정 파일
+  dispatcher-servlet.xml
   -->
-  <context-param>
-	<description>로깅 여부</description>
-	<param-name>logEnabled</param-name>
-	<param-value>true</param-value>
-  </context-param>
-  <context-param>
-	<description>디버깅 레벨</description>
-	<param-name>debugLevel</param-name>
-	<param-value>5</param-value>
-  </context-param>
-<!-- 
-DBServer : 192.212.42.54 로 매개변수 이름과 값을 설정하고,
-account : himan
-pass : 7777
-
-
--->    
-  <context-param>
-	<description>디비서버</description>
-	<param-name>DBServer</param-name>
-	<param-value>192.212.42.54</param-value>
-  </context-param>  
-  <context-param>
-	<description>계정</description>
-	<param-name>account</param-name>
-	<param-value>himan</param-value>
-  </context-param> 
-  <context-param>
-	<description>비밀번호</description>
-	<param-name>pass</param-name>
-	<param-value>7777</param-value>
-  </context-param>
-  <error-page>
-  	<error-code>404</error-code>
-  	<location>/a04_exception/z03_404.jsp</location>
-  </error-page>
-  
-  <error-page>
-  	<exception-type>java.lang.NullPointerException</exception-type>
-  	<location>/a04_exception/z05_null_exception.jsp</location>
-  </error-page>
-     
-  <error-page>
-  	<exception-type>java.lang.Exception</exception-type>
-  	<location>/a04_exception/z04_all_exception.jsp</location>
-  </error-page>
-  
-
-  
-  
+  <servlet>
+     <servlet-name>dispatcher</servlet-name>
+     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  <!-- 요청 값에 대한 encoding을 spring의 filter로 처리 -->
+  <filter-mapping>
+   <filter-name>encodingFilter</filter-name>  
+   <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+     <filter-name>encodingFilter</filter-name>
+     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+     <init-param>
+        <param-name>encoding</param-name>
+        <param-value>utf-8</param-value>
+     </init-param>
+  </filter>
 </web-app>
-
-
-
-
-
